--- a/minna-kanji-pdf/templates/lesson.html
+++ b/minna-kanji-pdf/templates/lesson.html
@@ -23,10 +23,11 @@
         <table class="table table-striped table-bordered">
             <thead class="table-dark">
                 <tr>
+                    <th style="width: 5%">Stt</th>
                     <th style="width: 15%">Hiragana</th>
                     <th style="width: 10%">Kanji</th>
                     <th style="width: 10%">Hán-Việt</th>
-                    <th style="width: 25%">Nghĩa</th>
+                    <th style="width: 20%">Nghĩa</th>
                     <th style="width: 30%">Phân tích bộ thủ</th>
                     <th style="width: 10%">Loại</th>
                 </tr>
@@ -34,6 +35,9 @@
             <tbody>
                 {% for item in vocab_list %}
                 <tr>
+                    <td class="text-center align-middle fw-bold">
+                        {{ loop.index }}
+                    </td>
                     <td class="hiragana-cell align-middle fw-bold">{{ item.hiragana }}</td>
                     <td class="kanji-cell text-center align-middle">{{ item.kanji }}</td>
                     <td class="hanviet-cell align-middle">{{ item.hanviet }}</td>
